--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: Ben Teitelbaum
+bio: Usually not wrong
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: Technology, lighting, life
 
 # if it's an external image, update below for true
 # better with square images
@@ -12,11 +12,11 @@ picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
-resume-external: true
-resume-url: https://google.com/?q=my+resume
+resume: false
+resume-external: false
+resume-url: resume.html
 
-url: https://koppl.in/indigo
+url: http://ben.teitelbaum.us
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
@@ -34,37 +34,31 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
-# instagram: myinstagram
+# facebook: myfacebook
+twitter: humanifold
+instagram: bteitelb
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: teitelbaum
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: bteitelb
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+# medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: ben@teitelbaum.us
 
 authors:
-  johndoe:
-    name: John Doe
-    bio: A Man who travels the world eating noodles
+  ben:
+    name: Ben Teitelbaum
+    bio: Usually not wrong
     external-image: false
     picture: assets/images/profile.jpg
-    twitter: johndoe
-  jamesfoster:
-    name: James Foster
-    bio: A Man who develops software with coffee
-    external-image: false
-    picture: assets/images/james.jpg
-    twitter: jamesfoster
+    twitter: humanifold
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
